--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/supertest": "^6.0.2",
     "argon2": "^0.41.1",
     "jest": "^29.7.0",
